--- a/composer.json
+++ b/composer.json
@@ -11,9 +11,9 @@
     },
     "minimum-stability": "dev",
     "require": {
-        "symfony/console": "2.4.*",
-        "symfony/process": "2.4.*",
-        "twig/twig": "1.15.*"
+        "symfony/console": "~2.4",
+        "symfony/process": "~2.4",
+        "twig/twig": "~1.15"
     },
     "autoload": {
         "psr-4": {
