--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
     },
     "minimum-stability": "dev",
     "require": {
+        "php": ">=5.4.2",
         "symfony/console": "~2.4",
         "symfony/process": "~2.4",
         "twig/twig": "~1.15"
