--- a/composer.json
+++ b/composer.json
@@ -12,8 +12,8 @@
     "minimum-stability": "dev",
     "require": {
         "php": ">=5.4.2",
-        "symfony/console": "~2.4",
-        "symfony/process": "~2.4",
+        "symfony/console": "2.4.*",
+        "symfony/process": "2.4.*",
         "twig/twig": "~1.15"
     },
     "autoload": {
