--- a/composer.json
+++ b/composer.json
@@ -1,4 +1,5 @@
 {
+    "abandoned": true,
     "name": "phergie/phergie-irc-plugin-react-scaffold",
     "description": "Utility used to generate files for Phergie plugins",
     "keywords": [ "irc", "plugin", "react", "tool" ],
